<resources>
    <string name="app_name">Cruzr Tutorial</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="change_color">Change Color</string>
    <string name="rotate_right">Rotate Right</string>
    <string name="rotate_left">Rotate Left</string>
    <string name="input_degrees"></string>
    <string name="forward">Forward</string>
    <string name="speak">Speak</string>
    <string name="understand">Understand</string>
    <string name="title_activity_mobile_test">MobileTest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="post">Post</string>
    <string name="request">Request</string>
    <string name="dialog">Dialog</string>
    <string name="start_rec">START REC</string>
    <string name="stop_rec">STOP REC</string>
    <string name="play_file">PLAY FILE</string>
    <string name="stop_file">STOP FILE</string>
</resources>
